<resources>
    <string name="app_name">Happy Birthday</string>

    <string name="profile_picture_uri">profile_picture_uri</string>
    <string name="selected_date_of_birth">selected_date_of_birth</string>
    <string name="date_of_birth_date_picker">date_of_birth_date_picker</string>
    <string name="user">user</string>

    <!-- Views -->
    <string name="view_details_profile_picture">Profile picture</string>
    <string name="view_details_full_name">Full name</string>
    <string name="view_details_date_of_birth">Date of birth</string>
    <string name="view_details_show_birthday_screen">Show birthday screen</string>

    <string name="view_birthday_share">Share the news</string>
    <string name="view_birthday_period_unit_placeholder">YEARS OLD!</string>
    <string name="view_birthday_name_placeholder">TODAY RUPERT IS</string>
    <string name="view_birthday_period_unit">%1$s OLD!</string>
    <string name="view_birthday_name">TODAY %1$s IS</string>
    <string name="view_birthday_month">MONTH</string>
    <string name="view_birthday_months">MONTHS</string>
    <string name="view_birthday_year">YEAR</string>
    <string name="view_birthday_years">YEARS</string>

</resources>
